파이썬을 이용한 HTML 표시, HTTPS 기초 이해

--- a/summary/1_페이지_로딩.md
+++ b/summary/1_페이지_로딩.md
@@ -251,3 +251,119 @@ class URL:
     s.close() # 소켓 닫기
     return body
 ```
+
+### 1.6 HTML 표시하기
+
+**HTML의 텍스트 출력하기**
+
+태그는 콘텐츠의 정보를 표시하고 텍스트는 실제 콘텐츠를 나타내니, 일단 태그를 제외한 페이지의 모든 텍스트를 출력해본다.
+
+```python
+def show(body):
+  in_tag = False
+  for c in body:
+    if c == "<":
+      in_tag = True
+    elif c == ">":
+      in_tag = False
+    elif not in_tag:
+      print(c, end="") # 태그 안에 있지 않은 문자만 출력
+```
+
+이제 `request`와 `show`를 사용하면 웹페이지를 로드할 수 있게 된다.
+
+```python
+# 웹페이지 로드
+def load(url):
+  body = url.request()
+  show(body)
+```
+
+커맨드 라인에서 이 스크립트를 실행하는 코드를 추가하자
+
+```bash
+# 커맨드 라인에서 실행할 때 load 함수 실행
+if __name__ == "__main__":
+  import sys
+  load(URL(sys.argv[1])) # 커맨드 라인 인수를 URL 객체로 변환하여 load 함수에 전달
+```
+
+이제 다음과 같이 내가 로드하고 싶은 웹페이지 주소를 가지고 스크립트를 실행하면 해당 페이지의 텍스트들을 불러올 수 있다.
+
+```bash
+$python3 browser.py http://example.org
+
+> Example Domainbody{background:#eee;width:60vw;margin:15vh auto;font-family:system-ui,sans-serif}h1{font-size:1.5em}div{opacity:0.8}a:link,a:visited{color:#348}Example DomainThis domain is for use in documentation examples without needing permission. Avoid use in operations.Learn more
+```
+
+### 1.7 암호화된 연결
+
+**https 연결하기**
+
+브라우저와 호스트 간 모든 통신이 평문화된 http 대신 https 스킴을 사용하여 암호화된 연결을 만들어보자. 이는 파이썬의 ssl 라이브러리를 사용하면 간단하게 만들 수 있다.
+
+소켓을 생성한 뒤 ssl 라이브러리를 사용하여 소켓을 감싼다.
+
+```python
+import ssl
+
+class URL:
+  def __init__(self, url):
+    self.scheme, url = url.split("://", 1)
+    # https를 스킴에 추가
+    assert self.scheme in ["http", "https"]
+
+    if "/" not in url:
+      url = url + "/"
+	    self.host, url = url.split("/", 1)
+	    self.path = "/" + url
+
+    # 연결에 따른 포트 지정
+    if self.scheme == "http":
+      self.port = 80
+    elif self.scheme == "https":
+      self.port = 443
+
+  def request(self):
+    # 소켓 생성
+    s = socket.socket(
+      #...
+    )
+
+    s.connect((self.host, self.port))
+
+		# https ssl 통신을 위해 소켓을 감싸기
+    if self.scheme == "https":
+      ctx = ssl.create_default_context()
+      s = ctx.wrap_socket(s, server_hostname=self.host)
+```
+
+**사용자 지정 포트 지원 추가하기**
+
+만약 URL에 포트가 있다면, 해당 포트를 파싱해서 사용하도록 만들자
+
+```python
+http://example.org:8080/index.html
+```
+
+```python
+class URL:
+  def __init__(self, url):
+    self.scheme, url = url.split("://", 1)
+    assert self.scheme in ["http", "https"]
+
+    if "/" not in url:
+      url = url + "/"
+    self.host, url = url.split("/", 1)
+    self.path = "/" + url
+
+    if self.scheme == "http":
+      self.port = 80
+    elif self.scheme == "https":
+      self.port = 443
+
+		# 사용자 지정 포트 파싱하기
+    if ":" in self.host:
+      self.host, port = self.host.split(":", 1)
+      self.port = int(port)
+```
